# Win32Frame-AmoUTq4P

./: .gitignore  CMakeLists.txt  run.bat
Win32Frame/: BaseWindow.hpp  ButtonControl.hpp  CMakeLists.txt  DebugTools.hpp  FormLayout.hpp  GridLayout.hpp  HorizontalLayout.hpp  IFComponent.hpp  IFControl.hpp  IFLayout.hpp  PaddingLayout.hpp  StaticTextControl.hpp  TabControl.hpp  TestWindow.hpp  VerticalLayout.hpp  Win32Frame.cpp  Win32Frame.h  framework.h
